parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@lists.py-9.snap
---
source: parser/src/parser/parser.rs
description: "[a for a in b if c]"
input_file: parser/test_data/inputs/one_liners/lists.py
---
Module {
    node: Node {
        start: 0,
        end: 19,
    },
    body: [
        ExpressionStatement(
            ListComp(
                ListComp {
                    node: Node {
                        start: 0,
                        end: 19,
                    },
                    element: Name(
                        Name {
                            node: Node {
                                start: 1,
                                end: 2,
                            },
                            id: "a",
                        },
                    ),
                    generators: [
                        Comprehension {
                            node: Node {
                                start: 3,
                                end: 18,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 7,
                                        end: 8,
                                    },
                                    id: "a",
                                },
                            ),
                            iter: Name(
                                Name {
                                    node: Node {
                                        start: 12,
                                        end: 13,
                                    },
                                    id: "b",
                                },
                            ),
                            ifs: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 17,
                                            end: 18,
                                        },
                                        id: "c",
                                    },
                                ),
                            ],
                            is_async: false,
                        },
                    ],
                },
            ),
        ),
    ],
}
