parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@sets.py-14.snap
---
source: parser/src/parser/parser.rs
description: "{\n    (a,b) for a in range(11) for b in range(10)\n}\n"
input_file: parser/test_data/inputs/one_liners/sets.py
---
Module {
    node: Node {
        start: 0,
        end: 52,
    },
    body: [
        ExpressionStatement(
            SetComp(
                SetComp {
                    node: Node {
                        start: 0,
                        end: 52,
                    },
                    element: Tuple(
                        Tuple {
                            node: Node {
                                start: 6,
                                end: 10,
                            },
                            elements: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 7,
                                            end: 8,
                                        },
                                        id: "a",
                                    },
                                ),
                                Name(
                                    Name {
                                        node: Node {
                                            start: 9,
                                            end: 10,
                                        },
                                        id: "b",
                                    },
                                ),
                            ],
                        },
                    ),
                    generators: [
                        Comprehension {
                            node: Node {
                                start: 12,
                                end: 30,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 16,
                                        end: 17,
                                    },
                                    id: "a",
                                },
                            ),
                            iter: Call(
                                Call {
                                    node: Node {
                                        start: 21,
                                        end: 30,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 21,
                                                end: 26,
                                            },
                                            id: "range",
                                        },
                                    ),
                                    args: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 27,
                                                    end: 29,
                                                },
                                                value: 11,
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                            ifs: [],
                            is_async: false,
                        },
                        Comprehension {
                            node: Node {
                                start: 31,
                                end: 50,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 35,
                                        end: 36,
                                    },
                                    id: "b",
                                },
                            ),
                            iter: Call(
                                Call {
                                    node: Node {
                                        start: 40,
                                        end: 50,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 40,
                                                end: 45,
                                            },
                                            id: "range",
                                        },
                                    ),
                                    args: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 46,
                                                    end: 48,
                                                },
                                                value: 10,
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                            ifs: [],
                            is_async: false,
                        },
                    ],
                },
            ),
        ),
    ],
}
