parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@sets.py-16.snap
---
source: parser/src/parser/parser.rs
description: "{\n    (a,b) for a in range(11) for b in range(10)\n}\n"
input_file: parser/test_data/inputs/one_liners/sets.py
---
[
    InvalidSyntax {
        msg: "Unexpected token NewLine",
        input: "",
        advice: "",
        span: (
            1,
            2,
        ),
    },
]
